--- a/JumpingGameTutorial/.classpath
+++ b/JumpingGameTutorial/.classpath
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="src" path="/AndEngine"/>
+	<classpathentry kind="src" path="/AndEnginePhysicsBox2DExtension"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Android/sdk/platforms/android-18/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
+	<classpathentry kind="lib" path="/AndEngineScriptingExtensionGenerator/lib/android.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/dpalmer/git/AndEnginePhysicsBox2DExtension/bin/andenginephysicsbox2dextension.jar" sourcepath="/AndEnginePhysicsBox2DExtension/src"/>
+	<classpathentry kind="src" path="/AndEngineAugmentedRealityExtension"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/dpalmer/git/AndEngine/bin/andengine.jar" sourcepath="/AndEngine/src"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
